// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseCommand alreadyUsedOption 1`] = `
{
  "suggestions": [
    {
      "description": "Display system information for bug report",
      "icon": "⚙️",
      "name": "--bug-report",
    },
  ],
}
`;

exports[`parseCommand alreadyUsedSuggestion 1`] = `undefined`;

exports[`parseCommand completePrefixFilter 1`] = `
{
  "suggestions": [
    {
      "description": "Show the working tree status",
      "icon": "📦",
      "name": "status",
    },
  ],
}
`;

exports[`parseCommand completedOptionWithArg 1`] = `
{
  "suggestions": [
    {
      "description": "User that triggered the event",
      "icon": "⚙️",
      "name": "--actor",
    },
    {
      "description": "Defines the path where the artifact server stores uploads and retrieves downloads from. If not specified the artifact server will not start",
      "icon": "⚙️",
      "name": "--artifact-server-path",
    },
    {
      "description": "Defines the port where the artifact server listens (will only bind to localhost)",
      "icon": "⚙️",
      "name": "--artifact-server-port",
    },
    {
      "description": "Architecture which should be used to run containers, e.g.: linux/amd64. If not specified, will use host default architecture. Requires Docker server API Version 1.41+. Ignored on earlier Docker server platforms",
      "icon": "⚙️",
      "name": "--container-architecture",
    },
    {
      "description": "Path to Docker daemon socket which will be mounted to containers",
      "icon": "⚙️",
      "name": "--container-daemon-socket",
    },
    {
      "description": "Working directory",
      "icon": "⚙️",
      "name": "--directory",
    },
    {
      "description": "Dryrun mode",
      "icon": "⚙️",
      "name": "--dryrun",
    },
    {
      "description": "Environment file to read and use as env in the containers",
      "icon": "⚙️",
      "name": "--env-file",
    },
    {
      "description": "GitHub instance to use. Don't use this if you are not using GitHub Enterprise Server",
      "icon": "⚙️",
      "name": "--github-instance",
    },
    {
      "description": "NOT RECOMMENDED! Doesn't hide secrets while printing logs",
      "icon": "⚙️",
      "name": "--insecure-secrets",
    },
    {
      "description": "Output logs in json format",
      "icon": "⚙️",
      "name": "--json",
    },
    {
      "description": "Flag to disable running workflows from subdirectories of specified path in '--workflows'/'-W' flag",
      "icon": "⚙️",
      "name": "--no-recurse",
    },
    {
      "description": "Do not skip actions/checkout",
      "icon": "⚙️",
      "name": "--no-skip-checkout",
    },
    {
      "description": "Disable logging of output from steps",
      "icon": "⚙️",
      "name": "--quiet",
    },
    {
      "description": "File with list of secrets to read from (e.g. --secret-file .secrets)",
      "icon": "⚙️",
      "name": "--secret-file",
    },
    {
      "description": "Verbose output",
      "icon": "⚙️",
      "name": "--verbose",
    },
    {
      "description": "Path to workflow file(s)",
      "icon": "⚙️",
      "name": "--workflows",
    },
    {
      "description": "Display help",
      "icon": "⚙️",
      "name": "--help",
    },
    {
      "description": "Disable completion descriptions",
      "icon": "⚙️",
      "name": "--no-descriptions",
    },
  ],
}
`;

exports[`parseCommand emptySuggestions 1`] = `
{
  "suggestions": [],
}
`;

exports[`parseCommand exclusiveOnOption 1`] = `
{
  "suggestions": [
    {
      "description": "Print a newline between matches in different files. Enabled by default",
      "icon": "⚙️",
      "name": "--nobreak",
    },
    {
      "description": "Don't print color codes in results",
      "icon": "⚙️",
      "name": "--nocolor",
    },
    {
      "description": "Don't print file names",
      "icon": "⚙️",
      "name": "--nofilename",
    },
    {
      "description": "Don't follow symlinks",
      "icon": "⚙️",
      "name": "--nofollow",
    },
    {
      "description": "Refrains from lumping matches in the same file together, and instead places the filename at the start of each match line",
      "icon": "⚙️",
      "name": "--nogroup",
    },
    {
      "description": "Don't print filenames above matching contents",
      "icon": "⚙️",
      "name": "--noheading",
    },
    {
      "description": "Don't use of memory-mapped I/O. Defaults to true on platforms where mmap() is faster than read(). (All but macOS.)",
      "icon": "⚙️",
      "name": "--nommap",
    },
    {
      "description": "Don't match regexes across newlines",
      "icon": "⚙️",
      "name": "--nomultiline",
    },
    {
      "description": "Don't recurse into directories",
      "icon": "⚙️",
      "name": "--norecurse",
    },
    {
      "description": "Don't print line numbers",
      "icon": "⚙️",
      "name": "--nonumbers",
    },
  ],
}
`;

exports[`parseCommand fullyTypedSuggestion 1`] = `
{
  "suggestions": [
    {
      "description": "Display whiteouts when scanning directories.  (-S) flag)",
      "icon": "⚙️",
      "name": "-W",
    },
    {
      "description": "Force raw printing of non-printable characters.  This is the default when output is not to a terminal",
      "icon": "⚙️",
      "name": "-w",
    },
  ],
}
`;

exports[`parseCommand noOptionsSuggestedAfterVariadicArg 1`] = `
{
  "argumentDescription": undefined,
  "suggestions": [],
}
`;

exports[`parseCommand partialPrefixFilter 1`] = `
{
  "suggestions": [
    {
      "description": "Add file contents to the staging area",
      "icon": "📦",
      "name": "stage",
    },
    {
      "description": "Show the working tree status",
      "icon": "📦",
      "name": "status",
    },
    {
      "description": "Temporarily stores all the modified tracked files",
      "icon": "📦",
      "name": "stash",
    },
  ],
}
`;

exports[`parseCommand providedArgDescription 1`] = `
{
  "argumentDescription": "actor",
  "suggestions": [],
}
`;

exports[`parseCommand providedSuggestion 1`] = `
{
  "argumentDescription": "Shell to generate completions for",
  "suggestions": [
    {
      "description": undefined,
      "icon": "📀",
      "name": "zsh",
    },
  ],
}
`;
